syntax = "proto3";

package com.learninghub.grpc;

option java_multiple_files = true;
option java_package = "com.learninghub.grpc.generated";

service HelloService {
    rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}
